contrib/kcp/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  namespace: envoy-gateway-system
spec:
  gatewayClassName: eg
  addresses:
    - type: IPAddress
      value: $GATEWAY_IP
  listeners:
    - name: passthrough
      protocol: TLS
      port: $PORT
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
