contrib/kcp/templates/kcp.yaml
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: root
  namespace: default
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - root.$BASE_DOMAIN
  rules:
    - backendRefs:
        - name: root-kcp
          port: 6443
          namespace: default
---
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: alpha
  namespace: default
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - alpha.$BASE_DOMAIN
  rules:
    - backendRefs:
        - name: alpha-shard-kcp
          port: 6443
          namespace: default
---
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: front-proxy
  namespace: default
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - $BASE_DOMAIN
  rules:
    - backendRefs:
        - name: frontproxy-front-proxy
          port: $PORT
          namespace: default
